--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 <body>
     <script src="https://greys2121.github.io/RUFFFFFLE_EMBED/ruffle/ruffle.js"></script>
     <div class="container">
-        <embed class="swf" pluginspage="http://www.macromedia.com/go/getflashplayer" src="https://bigbopperbops.github.io/age-of-war-2/age-of-war-2.swf" type="application/x-shockwave-flash">
+        <embed class="swf" pluginspage="http://www.macromedia.com/go/getflashplayer" src="https://schooluk.github.io/age-of-war-2/age-of-war-2.swf" type="application/x-shockwave-flash">
     </div>
 </body>
+
 </html>
